@@ -1,5 +1,6 @@
 2013-05-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* twitter/tweetentry.py (TweetEntry): Fixed Twitter commands.
 	* facebook/entry.py: Removed invalid characters.
 
 2013-05-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
